this update takes into account the fact that both link ends and attribute links are slots in UML2; linkEnd.instance now returns not the owning instance but rather the instance to which the link end is attached; cleanup / added documentation into UML models